@startuml src/main/resources/plantuml/Card.png
		skinparam classAttributeIconSize 0
		package "nl.deknik.card" {
		package "entity" {
class Card {
- Rank rank
- Suit suit
+ compareTo()
}
Card -right-..> Suit
Card ..> Rank
enum Rank {
A
K
Q
J
2 - 10
}
enum Suit {
Clubs
Hearts
Spades
Diamonds
}
@enduml